tooling/nargo_cli/tests/snapshots/execute__tests__signed_comparison_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "1725542942553907798",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2da1IbRxDH/3qZp4wxyOFhwBiHh3HMjh5oZZtHDAYcThEq0gFygXzL11TlJDlQrpKqqMvTVaMdGZdr/zNmC0+V1TJqmp7u30zPNitRwqdxPfz3l31eGv6rWCljMvO10pivle3XqvZ7yvCH2ju1Msk3DNFWMsZdku00cWNRsbKaDbQbXH0uShMZpyoBg9hKDtvtfrfZNy3za9Ls3aSdpN25OUxNajpp57dm2mr103ba7d30uknPtFt9M+j0Wv2BjNRUCLYG1rEqb45JTChLKB6UNSsfaEAUwBp8KEUpNJQl8KCsgQflA8SBskyOJ4gxoAHeDAj40LYbV+VVKtQIzBPwARelqYxT1YIkJNdi6SdmgujXZCBQsosjr5/MOU+RGSmR5vppMxwMhPEa+Bt2hWiLuWFPg1uN2fkQXqbB3/CZHE4T8/E1J7G8P4sWTxOwUJnRQjVj5awGRIvSDPxCJUqTGacqAYOYD/bEzBD9miUmoJjXrGk0KOtWPtSAKIB1+FCK0pegTPIN4jVrYurgQfmQmNyYUNIWU0Qo56x8pAFRAOfgQylKoaGcBQ/KOfCgfEROLrtM151kEvNR0AUUr+kzb+VjDYgulnn4C0iUQjd9eAsoNfPgAfoYxYSyiJ3IBSsXNSAK4AJ8KEWpSJ3IBfCgXEQcKNnNFiKUvF03YieyYeUTeXBhbsAHXJS+1Im8qwnJ24lsEOf4JBAo7MXBnPMPxLwqq4y5audLKvQC+Bv2PNEWc8NeArcas/MhvCyB34lkcrhEzEfMTiRtj43YiVy2ckUDokVpGX6hEqXQnUjeSSwxy0S/VogJKOblQbymz6qVTzUgCuAqfChFKXTThwnlKnhQPiUmNyaUtMUUEco1K9c1IArgGnwoRSk0lCvgQbkGHpTr5OSyy/Sqk0xiPgq6gOI1fTasfKYB0cWyAX8BiVLopg9vAaVmAzxAn6GYUBaxPb5p5XMNiAK4CR9KUSpSe3wTPCifIw6U7GYLEUrerhuxE7ll5Qt5cGHegg+4KIXuRIZKSN5O5BZxji8CgcJeHMw5/0jMq7LKmKt2vqRCb4K/YW8QbTE37G1wqzE7H8LLNvidSCaH28R8fH/LVHaMnsR2rNzVgGhR2oFfqESpSG+Z2gEPpF3eHKNCWUbxoNyz8qUGRAHcgw+lKIWGsgwelHvgQfkScaBkVwsQY0ADPOLlwb6Vr+TBhXkfPuCiVKS3TNEWy/DyYJ/o16tAoLAvD5hz/onMCPs4KhV6D/wNe4doi7lhvwa3GrPzIby8Bn/DZ3LIjOH3y4PsGD2JHahNDYgWpQP4hUqUinR5cADewk7wbaC8M+/jayadMe4GOT0ZK5saEAXQwIdSlLKnpzv7Pr7hiccQ/WqSk0veEZsHNmfsExRzYRvefM29/1SKiLfYtaxsA6MbQgv+JiFK2RtH7sWnUgwS0yL61Q4ECnvDZr4vlXlnWQfczUY5zw720Zbod+L6exjS4cMAdrvgnipCzLvrBJhkN+p1FG2TiXgbY2plTwOilSeFX41EKfRtjG4Q81aQFDzoe4GSy44fs4Iw4/cG3EUdq4Iw/Xb9fRvS4bcB7L7D3a4gMu93ToBJdoP42rW+spsmXdz3yjlIx7gbpHIeWXmsAdEqeQS/copSkSrnEXhQHhOTGxNKnt/xjnMnrm0XwBP4UIpSaCiPwYPyBDwoT1GM4xzzCMaM38/gVppYxzmm366/70M6/D6A3TMiDKHmfeYEmGQ3iK+p9ZV9nEvBXWQyYlTOMrj5yg6O7dFfKJ9b+UEDolXyHH7lFKUi3dp3Dh6UH1BMKHnHuXhQXlh5qQFRAC/gQylKoaHkHedScwEelJeIAyX7l6GMRU6/zop4v+mVlR/lwYX5Cj7gohT6ftNQCcl798UV0a+PgUBh3y3BnPMvREaUVcZc9f5GqdAX4G/Y50RbzA37GtxqzM6H8HIN/obP5PCamA+Jn+6lyqDGdVwhrDrP1608++/fy3/+/nPX1Xtzy2u/3/LaH595TX3RvpXWg2nHX+KfpWiq/Zkw9pPsgc2di/tzs/Ovjvm+0mf+X87I23Rv68HUx7ymNvUjXF1/dR5TGdlw7DL/hIjaXwxjf2yuGs7zxcw83XifknxQe7pGa/BHOfOa6mbXTInvn8n6Uhnzs3SMfOyvHRrP/wG/qi1PonAAAA==",
  "debug_symbols": "ldnbaupAFIDhd5lrL2atWXPyVTabEjWWQIgSdcNG+u7V0pQS08p/l5Xhm5s/gRyubtduLq8v3bA/nNz6z9X1h21z7g7Dbbq68HHqdGyG+3Q6N+PZrUVt5dphdz+qbyu37/rWraN/+7tyRkGkIFGQKSgUVArEYyFYKBa4tuDcgnsLDi64uCwntzAJi3NRqVCPhWChWAQsDIuIRcIiY4GbK24ecPPwtPn82g2KRcDCsIhYJCwyFgWLSoV5LHBzw80NNzfc3HBzW26evkSa3x+WsShYVCqix0KwUCwCFoZFxAI3j7h5xM3js+bZz59DPRaChWIRsDAsIhYJi4xFwQI3z7h5xs0zbp5x87zcvMRJ1AcRsUhYZCwKFpWK4rEQLBSLgAVuXnDzgpsX3Lz80Hx6u1P/IBabq3wJlZmoHgvBQrEIWBgWEYuERcZisbmGOgmzuahUiPecCCfKSeDEOImcJE4yJ4UTXl94feH1hdcXXl94fXla//GLZOIkc1I4qZio50Q4UU4CJ8YJr6+8vvL6+kP9+AupmATPiXCinAROjJPISeIkc8LrB17feH3j9Q3Wvw2bsev77vXl+x+52+l/zdg1m779HPeXYftt9fz/OK1M/jgetu3uMrb3nT7Wbtu/Aw==",
  "file_map": {
    "50": {
      "source": "fn main(mut x: i8, mut y: i8, z: i8) {\n    let mut s1: i8 = 5;\n    let mut s2: i8 = 8;\n    assert(-1 as i8 < 0);\n    assert(x < y);\n    assert(-x < y);\n    assert(-y < -x);\n    assert((z > x) == false);\n    assert(x <= s1);\n    assert(z < x - y - s2);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/signed_comparison/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
